# minitask

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: future.rs  lib.rs  stream.rs  task.rs  tasks.rs
