[package]
name = "minitask"
version = "0.1.0"
edition = "2024"
authors = ["@dmitrydodzin"]
license = "MIT"
description = "MiniTask a simple wrapper for async tasks"
repository = "https://github.com/DmitryDodzin/minitask"
keywords = ["futures", "task"]

[features]
default = ["std"]
std = []

[dependencies]
async-channel = { version = "2", default-features = false }
fastrand = { version = "2", default-features = false }
futures-core = { version = "0.3", default-features = false }
pin-project-lite = "0.2"

[dev-dependencies]
smol = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
