[package]
name = "minitask"
version = "0.1.2"
edition = "2024"
authors = ["@dmitrydodzin"]
license = "MIT"
description = "MiniTask a simple wrapper for async tasks"
repository = "https://github.com/DmitryDodzin/minitask"
keywords = ["futures", "task"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
alloc = [
	"dep:async-channel",
	"dep:fastrand",
	"dep:futures-core",
	"dep:pin-project-lite",
]
portable-atomic = [
	"dep:async-channel",
	"async-channel/portable-atomic"
]
std = [
	"alloc",
	"fastrand/std"
]

[dependencies]
async-channel = { version = "2.4", default-features = false, optional = true }
fastrand = { version = "2", default-features = false, optional = true }
futures-core = { version = "0.3", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
smol = "2"
